--- a/plugins/pluginlist.am
+++ b/plugins/pluginlist.am
@@ -17,6 +17,9 @@ ea65_la_SOURCES                  = ea65.c
 plugin_LTLIBRARIES              += file.la
 file_la_SOURCES                  = file.c
 
+plugin_LTLIBRARIES              += i2c_ir.la
+i2c_ir_la_SOURCES                = i2c_ir.c
+
 plugin_LTLIBRARIES              += irlink.la
 irlink_la_SOURCES                = irlink.c
 
